# wanderbot

./: .gitignore  README.md
gazeboworlds/: obstacle_box.sdf  obstacle_box_difficult.sdf
scripts/: find_files_missing_copyright.sh  format.sh  print_if_no_copyright.sh  start.sh  start_difficult.sh  test.sh
src/wanderbot/: CMakeLists.txt  package.xml
src/wanderbot/include/wanderbot/: action.hpp
src/wanderbot/include/wanderbot/config/: config.hpp
src/wanderbot/include/wanderbot/fsm/: action.hpp  state.hpp
src/wanderbot/include/wanderbot/fsm/statehandler/: state_handler.hpp  state_handler_back_up.hpp  state_handler_blocked.hpp  state_handler_change_direction.hpp  state_handler_error.hpp  state_handler_go.hpp  state_handlers.hpp
src/wanderbot/include/wanderbot/laser/: laser_analysis.hpp  laser_analyzer.hpp  laser_characteristics.hpp
src/wanderbot/include/wanderbot/linearalgebra/: vector.hpp
src/wanderbot/include/wanderbot/motion/: obstacle_avoider.hpp  velocity.hpp
src/wanderbot/include/wanderbot/motion/vff/: vector_force_field_calculator.hpp
src/wanderbot/include/wanderbot/vector/: vector_by_magnitude_angle.hpp  vector_by_standard_position.hpp  vector_converter.hpp
src/wanderbot/include/wanderbot/velocity/: velocity.hpp  velocity_calculator.hpp
src/wanderbot/include/wanderbot/velocity/vff/: vector_force_field_calculator.hpp
src/wanderbot/src/: action.cpp  wanderbot_node.cpp
src/wanderbot/src/config/: config.cpp
src/wanderbot/src/fsm/: action.cpp
src/wanderbot/src/fsm/statehandler/: state_handler_back_up.cpp  state_handler_blocked.cpp  state_handler_change_direction.cpp  state_handler_error.cpp  state_handler_go.cpp  state_handlers.cpp
src/wanderbot/src/laser/: laser_analysis.cpp  laser_analyzer.cpp  laser_characteristics.cpp
src/wanderbot/src/linearalgebra/: vector.cpp
src/wanderbot/src/motion/: velocity.cpp
src/wanderbot/src/motion/vff/: vector_force_field_calculator.cpp
src/wanderbot/src/ros2/: wanderbot_node.cpp
src/wanderbot/src/vector/: vector_by_magnitude_angle.cpp  vector_by_standard_position.cpp  vector_converter.cpp
src/wanderbot/src/velocity/: velocity.cpp  velocity_calculator.cpp
src/wanderbot/src/velocity/vff/: vector_force_field_calculator.cpp
src/wanderbot/tests/: CMakeLists.txt  test_constants.hpp
src/wanderbot/tests/laser/: laser_analysis_test.cpp  laser_characteristics_test.cpp  laser_test.cpp
src/wanderbot/tests/statehandler/: state_handler_blocked_test.cpp  state_handler_go_test.cpp
src/wanderbot/tests/statehandler/mock/: mock_obstacle_avoider.cpp  mock_obstacle_avoider.hpp
src/wanderbot/tests/velocity/: velocity_calculator_test.cpp
src/wanderbot/tests/velocity/vff/: vector_converter_test.cpp  vector_force_field_calculator_test.cpp
